# DocAgent

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CURRENT_STATUS.md  DECISIONS.md  README.md  README_EN.md  pyproject.toml  sitecustomize.py
configs/: answer_policy.yaml  document_workflow.yaml  eval.yaml  grpo_qwen3.yaml  parser.yaml  parser_mineru.yaml  phase5i_clean_answer_quality_candidates.jsonl  retrieval_hybrid.yaml  retriever.yaml  sft_qwen3_lora.yaml  workflow_mpdocvqa.yaml
docagent/: __init__.py  schemas.py
docs/: ACTIVE_PLAN.md  ANSWER_POLICY_V3_FIRST_TRAINING_REPORT.md  ANSWER_POLICY_V3_TRAINING_SUMMARY.md  DATASETS.md  FINAL_DELIVERY_CLI.md  FINAL_DELIVERY_REPORT.md  GPU_SERVER_BOUNDARY.md  IMPLEMENTATION_PLAN.md  PHASE2_ACTIVE_PLAN.md  PHASE3_ACTIVE_PLAN.md  PHASE4C_CANDIDATE_SPANS_REPORT.md  PHASE4D-A_Candidate_Answer_Coverage_Audit.md  PHASE4_ACTIVE_PLAN.md  PHASE5I_B_MODEL_ANSWER_QUALITY.md  PHASE5_ACTIVE_PLAN.md  PHASE5_MVP_ACCEPTANCE.md  PHASE5_ROUTER_CONTRACT.md  PHASE5_TOOL_INVENTORY.md  PROJECT_GIT_BRANCH_SYNC_PROTOCOL.md  PROJECT_HANDOFF_PM.md  SERVER_SETUP.md
reports/: docagent_project_report.json
scripts/: __init__.py  analyze_phase4d_candidate_answer_coverage.py  analyze_reader_errors.py  analyze_sft_eval.py  audit_answer_prompt_media_metadata.py  audit_mineru_evidence_artifacts.py  audit_phase5i_case_quality.py  audit_training_data.py  bootstrap_autodl.sh  build_answer_hard_grpo_subset.py  build_answer_policy_sft_candidates.py  build_answer_policy_training_pack.py  build_answer_policy_v3_insufficient_data.py  build_grpo_dataset.py  (+122 more)
(+204 files in other folders)
