[project]
name = "docagent"
version = "0.1.0"
description = "Complex document QA and post-training MVP"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
retrieval = [
  "FlagEmbedding",
  "sentence-transformers",
  "faiss-cpu",
]
workflow = [
  "langgraph",
]
app = [
  "fastapi",
  "uvicorn",
  "gradio>=3.40.0,<6.0",
]
training = [
  "ms-swift",
  "msgspec",
  "transformers",
  "datasets",
  "peft",
  "accelerate",
  "deepspeed",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
